--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name="com.iriska.bestinstaphoto.InstaLoginActivity"
             android:label="@string/app_name"/>
+        <activity android:name=".CollageActivity"
+            android:label="@string/app_name"/>
         
     </application>
 
